# FoAI-Backend

./: .env.dist  .gitignore  .pylintrc  .releaserc.json  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: version.json
foai_backend/: main.py
foai_backend/routes/predict/: predict.py
foai_backend/utils/: __init__.py  pdf_reader.py
scripts/: entrypoint.py  scripts.py
